[package]
name = "cvmcount"
description = "use the CVM algorithm to quickly estimate the number of distinct elements in a stream"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/urschrei/cvmcount" 
documentation = "https://docs.rs/cvmcount"
keywords = ["CVM", "count-distinct", "estimation"]
categories = ["algorithms", ]

version = "0.1.6"
edition = "2021"

[dependencies]
rand = "0.8.5"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["cargo"] }

[lib]
name = "cvmcount"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "cvmcount"
path = "src/main.rs"
test = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
