[package]
name = "cvmcount"
description = "use the CVM algorithm to quickly estimate the number of distinct elements in a stream"
readme = "README.md"
license = "BlueOak-1.0.0"
repository = "https://github.com/urschrei/cvmcount" 
documentation = "https://docs.rs/cvmcount"
keywords = ["CVM", "count-distinct", "estimation", "treap"]
categories = ["algorithms", ]
rust-version = "1.85"

version = "1.0.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["cargo"] }
rustc-hash = "2.1.1"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[lib]
name = "cvmcount"
path = "src/lib.rs"
doctest = false
bench = false

[[bin]]
name = "cvmcount"
path = "src/main.rs"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "benchmarks"
harness = false
